[gd_scene load_steps=13 format=3 uid="uid://bysyrl13abvvh"]

[ext_resource type="Script" path="res://scene/phase1/weaponselect.gd" id="1_qfjnm"]
[ext_resource type="Texture2D" uid="uid://rkjbkuu5lh6t" path="res://black.png" id="2_yw5b2"]
[ext_resource type="Texture2D" uid="uid://bsvya57snwbdn" path="res://gun_case.png" id="3_cv2us"]
[ext_resource type="Texture2D" uid="uid://uig0kxgc0byj" path="res://assets/weapons/sniperimg.png" id="4_xm15y"]
[ext_resource type="Texture2D" uid="uid://cvtnw068gfxfv" path="res://assets/weapons/shotgunimg.png" id="5_2h0k2"]
[ext_resource type="Texture2D" uid="uid://d1bpxlups6qsc" path="res://assets/weapons/pistolimg.png" id="6_x8q8g"]
[ext_resource type="Texture2D" uid="uid://dy1mjcddaj5pt" path="res://assets/weapons/launcherimg.png" id="7_wpfh1"]
[ext_resource type="Texture2D" uid="uid://crod22iihsffy" path="res://assets/weapons/uziimg.png" id="8_kiblc"]
[ext_resource type="PackedScene" uid="uid://bxs5n3x3njv8t" path="res://scene/phase1/uparrow_1.tscn" id="9_28iyl"]
[ext_resource type="PackedScene" uid="uid://c1u1wuryc8y4j" path="res://scene/phase1/downarrow_1.tscn" id="11_fghqi"]
[ext_resource type="FontFile" uid="uid://c0mc3uhedbvnm" path="res://ONESIZE_.TTF" id="11_qmkyg"]

[sub_resource type="LabelSettings" id="LabelSettings_ihs2l"]
font = ExtResource("11_qmkyg")
font_size = 25

[node name="Weaponselect" type="Node2D"]
script = ExtResource("1_qfjnm")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 6.0
offset_top = 1.0
offset_right = 1926.0
offset_bottom = 1081.0
texture = ExtResource("2_yw5b2")

[node name="case" type="Sprite2D" parent="."]
position = Vector2(400, 225)
texture = ExtResource("3_cv2us")

[node name="sniper" type="Sprite2D" parent="."]
position = Vector2(301, 247)
texture = ExtResource("4_xm15y")

[node name="shotgun" type="Sprite2D" parent="."]
position = Vector2(524, 249)
texture = ExtResource("5_2h0k2")

[node name="pistol" type="Sprite2D" parent="."]
visible = false
position = Vector2(412, 249)
texture = ExtResource("6_x8q8g")

[node name="grenadelauncher" type="Sprite2D" parent="."]
visible = false
position = Vector2(412, 248)
texture = ExtResource("7_wpfh1")

[node name="uzi" type="Sprite2D" parent="."]
position = Vector2(414, 249)
texture = ExtResource("8_kiblc")

[node name="uparrow1" parent="." instance=ExtResource("9_28iyl")]
offset_left = 408.0
offset_top = 224.0
offset_right = 416.0
offset_bottom = 230.0

[node name="downarrow1" parent="." instance=ExtResource("11_fghqi")]
offset_left = 408.0
offset_top = 268.0
offset_right = 416.0
offset_bottom = 274.0

[node name="start" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 361.0
offset_top = 189.0
offset_right = 445.0
offset_bottom = 210.0

[node name="label" type="Label" parent="start"]
offset_right = 85.0
offset_bottom = 26.0
text = "START"
label_settings = SubResource("LabelSettings_ihs2l")

[connection signal="mouse_entered" from="uparrow1" to="." method="_on_uparrow_1_mouse_entered"]
[connection signal="mouse_exited" from="uparrow1" to="." method="_on_uparrow_1_mouse_exited"]
[connection signal="mouse_entered" from="downarrow1" to="." method="_on_downarrow_1_mouse_entered"]
[connection signal="mouse_exited" from="downarrow1" to="." method="_on_downarrow_1_mouse_exited"]
[connection signal="mouse_entered" from="start" to="." method="_on_start_mouse_entered"]
[connection signal="mouse_exited" from="start" to="." method="_on_start_mouse_exited"]
